fixed spacing for prints and getpro text size

--- a/react-app/src/components/GetPro/GetPro.css
+++ b/react-app/src/components/GetPro/GetPro.css
@@ -269,7 +269,7 @@
     height: 100%;
   }
   .info-header {
-    font-size: 15px;
+    font-size: 20px;
     margin-bottom: 5px;
   }
   .slide-info-right {
